<resources>
    <string name="app_name">YoudDaoTest</string>
    <string name="home_page">首页</string>
    <string name="video">视频</string>
    <string name="min_top">微头条</string>
    <string name="mine">我的</string>
    <string name="main_search_hint">搜你想搜的</string>

    <string name="charge_netease_charge">网易充电桩</string>
    <string name="charge_start_refresh">开始刷新</string>
    <string name="charge_stop_refresh">停止刷新</string>
    <string name="charge_refreshing">正在进行第%d次刷新</string>
    <string name="charge_no_free_charge">当前没有空余充电桩</string>
    <string name="charge_free_charges">当前可以预约:\n%s</string>
    <string name="charge_all_charge_stub">快充+慢充</string>
    <string name="charge_ac_charge_stub">慢充</string>
    <string name="charge_dc_charge_stub">快充</string>
    <string name="charge_info_hit">选择充电桩类型，点击开始刷新，获取充电桩信息</string>
    <string name="charge_manual_book">手动预约</string>
    <string name="charge_auto_book">自动预约</string>
    <string name="charge_book_success">预约成功</string>
    <string name="charge_book_failed">预约失败</string>
    <string name="charge_auto_not_open">自动预约暂未开放</string>

</resources>
