<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/view_toolbar"
        layout="@layout/view_toolbar" />

    <TextView
        android:id="@+id/tv_charge_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/charge_info_hit"
        android:layout_below="@id/view_toolbar" />

    <RadioGroup
        android:id="@+id/rg_charge_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_charge_ac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charge_ac_charge_stub"/>
        <RadioButton
            android:id="@+id/rb_charge_dc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charge_dc_charge_stub"/>
        <RadioButton
            android:id="@+id/rb_charge_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/charge_all_charge_stub"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg_charge_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_charge_manual_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/charge_manual_book"/>
        <RadioButton
            android:id="@+id/rb_charge_auto_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charge_auto_book"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_start_refresh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/charge_start_refresh" />

        <Button
            android:id="@+id/btn_stop_refresh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/charge_stop_refresh" />
    </LinearLayout>

</LinearLayout>