<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<include-->
        <!--layout="@layout/view_toolbar"-->
        <!--android:id="@+id/toolbar"/>-->

    <FrameLayout
        android:id="@+id/fl_main_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </FrameLayout>

    <RadioGroup
        android:id="@+id/rg_main_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0"
        android:background="@color/color_DBDBDB"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_main_first"
            style="@style/RadioButtonStyle"
            android:drawableTop="@drawable/selector_main_footer_first"
            android:checked="true"
            android:text="@string/home_page"/>
        <RadioButton
            android:id="@+id/rb_main_video"
            style="@style/RadioButtonStyle"
            android:drawableTop="@drawable/selector_main_footer_video"
            android:text="@string/video"/>
        <RadioButton
            android:id="@+id/rb_main_min_top"
            style="@style/RadioButtonStyle"
            android:drawableTop="@drawable/selector_main_footer_min_top"
            android:text="@string/min_top"/>
        <RadioButton
            android:id="@+id/rb_main_mine"
            style="@style/RadioButtonStyle"
            android:drawableTop="@drawable/selector_main_footer_mine"
            android:text="@string/mine"/>

    </RadioGroup>

</LinearLayout>
